--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -14,15 +14,14 @@
 <body>
     <div class="container">
         <!-- start container -->
-
         <!-- start hero-block -->
         <div class="hero-block">
-            <div class="header">
-
-                <!-- start header__navigation -->
+            <!-- start header -->
+            <div class="header header-mobile">
                 <div class="header__navigation">
                     <div class="header__navigation-title">
-                        <span><a href="#">Portofolio</a></span>
+                        <span class="header__navigation-images"><img class="" src="./img/navigation.svg" alt=""></span>
+                        <span class="header__navigation-titles"><a href="#">Portofolio</a></span>
                     </div>
                     <ul class="menu">
                         <li>
@@ -45,12 +44,11 @@
                         </li>
                     </ul>
                 </div>
-
                 <!-- end header -->
             </div>
-
+            <!-- end header -->
+            <!-- start Hero-block__information -->
             <div class="hero-block__information">
-
                 <div class="hero-block__information__main-title">
                     Hi, It’s Théophile Seyrig
                 </div>
@@ -59,14 +57,12 @@
                 </div>
                 <div class="hero-block__information__latest-works">
                     <a href="#"> Latest works</a></div>
-
             </div>
+            <!-- end Hero-block__information -->
         </div>
         <!-- close hero-block -->
-
         <!-- start about -->
-        <div class="about">
-
+        <div class="about about-mobile">
             <div class="about__title">
                 <span>About</span>
             </div>
@@ -75,20 +71,15 @@
                     nulla nulla egestas odio pharetra egestas aliquet mollis. <br><br> Arcu, sed nisi, mi, arcu libero phasellus tincidunt. Rhoncus, diam penatibus aliquet tellus, in rutrum augue. Pellentesque senectus risus consectetur et sed purus sed.
                     Consectetur adipiscing elit. Egestas porttitor nulla nulla egestas odio pharetra egestas aliquet mollis. diam penatibus aliquet tellus, in rutrum augue. Pellentesque.</p>
             </div>
-
         </div>
         <!-- close about -->
         <!-- start skills -->
-        <div class="skills">
-
+        <div class="skills skills-mobile">
             <div class="profile_title">
                 <span>
                     Skills
                 </span>
             </div>
-
-
-
             <div class="profile-details">
                 <div class="profile-images"><img src="./img/profile-picture.svg" alt="">
                 </div>
@@ -114,24 +105,20 @@
                 </div>
 
             </div>
-
         </div>
         <!-- close skills -->
         <!-- start portfolio -->
-        <div class="portfolio">
-
+        <div class="portfolio portfolio-mobile">
             <div class="portfolio__title ">
                 <span class="portfolio__title-main">Portfolio</span>
                 <span class="portfolio__title-second">UX Research</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac dictum nibh nam odio cursus id. Diam massa semper a tincidunt cursus ultricies lectus eget urna.</p>
             </div>
-
             <div class="portfolio__images">
-                <div class="portfolio__info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac dictum nibh nam odio cursus id. Diam massa semper a tincidunt cursus ultricies lectus eget urna.</p>
-                    <div class="portfolio__arrows">
-                        <span><a href="#"><img class="arrow"src="./img/arrow-left.svg" alt=""></a>
+
+                <div class="portfolio__arrows">
+                    <span><a href="#"><img class="arrow"src="./img/arrow-left.svg" alt=""></a>
                             <a href="#"><img src="./img/arrow-right.svg" alt=""></a></span>
-                    </div>
                 </div>
                 <div class="side-left">
                     <span class="img-1"><img src="./img/portfolio_img-1.svg" alt=""></span>
@@ -142,14 +129,15 @@
                     <span class="img-1"><img src="./img/portfolio_img-3.svg" alt=""></span>
                     <span><img src="./img/portfolio_img-4.svg" alt=""></span>
                 </div>
-
             </div>
-        </div>
 
+
+
+
+        </div>
         <!-- close portfolio -->
         <!-- start Get_in_touch -->
-        <div class="Get__in__touch">
-
+        <div class="Get__in__touch Get__in__touch-mobile">
             <div class="Get__in__touch-title"><span>Get in Touch</span></div>
             <div class="Get__in__touch-details">
                 <div class="side left">
@@ -165,23 +153,17 @@
                     <span><a href="#">Instagram</a></span>
                     <span><a href="#">Twitter</a></span>
                 </div>
-
             </div>
             <div class="Get__in__touch-footer">
-
                 <span class="mail">seyrig@mailme.com</span>
                 <span class="number">+ 55 6645 665544</span>
-
-
-            </div>
-            <div class="Get__in__touch-arrow">
                 <a href="#">
                     <img src="./img/arrow.svg" alt=""></span>
                 </a>
+
             </div>
 
         </div>
-
         <!-- end Get_in_touch -->
     </div>
     <!-- close container -->
