--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -15,15 +15,15 @@
     <div class="container">
         <!-- start container -->
         <!-- start hero-block -->
-        <div class="hero-block">
+        <div class="hero-block hero-block-mb">
             <!-- start header -->
-            <div class="header header-mobile">
-                <div class="header__navigation">
-                    <div class="header__navigation-title">
-                        <span class="header__navigation-images"><img class="" src="./img/navigation.svg" alt=""></span>
-                        <span class="header__navigation-titles"><a href="#">Portofolio</a></span>
+            <div class="header header-mb">
+                <div class="header__navigation header__navigation-mb">
+                    <div class="header__navigation-title header__navigation-title-mb">
+                        <span class="header__navigation-images header__navigation-images-mb"><img class="" src="./img/navigation.svg" alt=""></span>
+                        <span class="header__navigation-titles header__navigation-titles-mb"><a href="#">Portofolio</a></span>
                     </div>
-                    <ul class="menu">
+                    <ul class="menu menu-mb">
                         <li>
                             <a href="#">Home</a>
                         </li>
@@ -48,14 +48,14 @@
             </div>
             <!-- end header -->
             <!-- start Hero-block__information -->
-            <div class="hero-block__information">
-                <div class="hero-block__information__main-title">
+            <div class="hero-block__information hero-block__information-mb">
+                <div class="hero-block__information__main-title hero-block__information__main-title-mb">
                     Hi, It’s Théophile Seyrig
                 </div>
-                <div class="hero-block__information__second-title">
+                <div class="hero-block__information__second-title hero-block__information__second-title-mb">
                     Designer from Porto, Portugal
                 </div>
-                <div class="hero-block__information__latest-works">
+                <div class="hero-block__information__latest-works hero-block__information__latest-works-mb">
                     <a href="#"> Latest works</a></div>
             </div>
             <!-- end Hero-block__information -->
@@ -91,7 +91,6 @@
                     <span class="col-5">Tools</span>
                     <span class="col-6">Front-end Dev</span>
                     <span class="col-7">Tools</span>
-
                 </div>
                 <div class="profile-details-block-right-side">
                     <span class="col-1">UI / UX Engineer, Front-end Developer</span>
@@ -103,7 +102,6 @@
                     <span class="col-7">Paper, Pen, Balsamiq</span>
                     <!-- <img src="./img/progress-bar.svg" alt=""> -->
                 </div>
-
             </div>
         </div>
         <!-- close skills -->
@@ -113,27 +111,23 @@
                 <span class="portfolio__title-main">Portfolio</span>
                 <span class="portfolio__title-second">UX Research</span>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac dictum nibh nam odio cursus id. Diam massa semper a tincidunt cursus ultricies lectus eget urna.</p>
+                <div class="portfolio__arrows">
+                    <span>
+                        <a href="#"><img class="arrow"src="./img/arrow-left.svg" alt=""></a>
+                        <a href="#"><img src="./img/arrow-right.svg" alt=""></a>
+                    </span>
+                </div>
             </div>
             <div class="portfolio__images">
-
-                <div class="portfolio__arrows">
-                    <span><a href="#"><img class="arrow"src="./img/arrow-left.svg" alt=""></a>
-                            <a href="#"><img src="./img/arrow-right.svg" alt=""></a></span>
-                </div>
                 <div class="side-left">
                     <span class="img-1"><img src="./img/portfolio_img-1.svg" alt=""></span>
                     <span><img src="./img/portfolio_img-2.svg" alt=""></span>
-
                 </div>
                 <div class="side-right">
                     <span class="img-1"><img src="./img/portfolio_img-3.svg" alt=""></span>
                     <span><img src="./img/portfolio_img-4.svg" alt=""></span>
                 </div>
             </div>
-
-
-
-
         </div>
         <!-- close portfolio -->
         <!-- start Get_in_touch -->
@@ -158,11 +152,9 @@
                 <span class="mail">seyrig@mailme.com</span>
                 <span class="number">+ 55 6645 665544</span>
                 <a href="#">
-                    <img src="./img/arrow.svg" alt=""></span>
+                    <img src="./img/arrow.svg" alt="">
                 </a>
-
             </div>
-
         </div>
         <!-- end Get_in_touch -->
     </div>
